compiler/tests/should-pass/polymorphism/Polymorphism2.via
fun f{X, Z}(a: int{X}, b: int{bob}, c: out int{Z}) where (X <: alice, alice ⊔ bob <: Z) : {⊥<-} {
  out c = a + b;
}

fun main() {
  val x : int = input int from alice;
  val y : int = input int from bob;
  f(x, y, val z);
}

host alice
host bob

host chuck
assume alice trusts chuck
assume bob trusts chuck
