compiler/tests/should-fail/InsecureDataFlowConfidentiality.via
/* InsecureDataFlowError */

fun main() {
    val secret: int{(alice ∧ bob)->} = 42;
    val public: int{alice->} = secret;
}

host alice
host bob
